game card & footer based on game status

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,3 +42,15 @@
 .large {
   max-width: 225px;
 }
+
+.remove-margin {
+  margin: 0;
+}
+
+.align-text-right {
+  text-align: right;
+}
+
+.align-text-center {
+  text-align: center;
+}
