change abbreviation to capital

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,93 +1,93 @@
 :root {
   --nhl-black: #010101;
   --nhl-white: #ffffff;
-  --njd-1-primary: #c8102e;
-  --njd-1-secondary: var(--nhl-black);
-  --njd-1-tertiary: var(--nhl-white);
-  --nyi-2-primary: #003087;
-  --nyi-2-secondary: #fc4c02;
-  --nyi-2-tertiary: var(--nhl-white);
-  --nyr-3-primary: #0033a0;
-  --nyr-3-secondary: #c8102e;
-  --nyr-3-tertiary: var(--nhl-white);
-  --phi-4-primary: #fa4616;
-  --phi-4-secondary: var(--nhl-black);
-  --phi-4-tertiary: var(--nhl-white);
-  --pit-5-primary: #ffb81c;
-  --pit-5-secondary: var(--nhl-black);
-  --pit-5-tertiary: var(--nhl-white);
-  --bos-6-primary: #ffb81c;
-  --bos-6-secondary: var(--nhl-black);
-  --bos-6-tertiary: var(--nhl-white);
-  --buf-7-primary: #003087;
-  --buf-7-secondary: #ffb81c;
-  --buf-7-tertiary: var(--nhl-white);
-  --mtl-8-primary: #a6192e;
-  --mtl-8-seconary: #001e62;
-  --mtl-8-tertiary: var(--nhl-white);
-  --ott-9-primary: #b9975b;
-  --ott-9-secondary: #c8102e;
-  --ott-9-tertiary: var(--nhl-black);
-  --tor-10-primary: #00205b;
-  --tor-10-secondary: var(--nhl-white);
-  --tor-10-tertiary: #00205b;
-  --car-12-primary: #c8102e;
-  --car-12-secondary: var(--nhl-black);
-  --car-12-tertiary: var(--nhl-white);
-  --fla-13-primary: #b9975b;
-  --fla-13-secondary: #041e42;
-  --fla-13-tertiary: #c8102e;
-  --tbl-14-primary: #00205b;
-  --tbl-14-secondary: var(--nhl-white);
-  --tbl-14-tertiary: #00205b;
-  --wsh-15-primary: #041e42;
-  --wsh-15-secondary: #c8102e;
-  --wsh-15-tertiary: var(--nhl-white);
-  --chi-16-primary: #c8102e;
-  --chi-16-secondary: var(--nhl-black);
-  --chi-16-tertiary: var(--nhl-white);
-  --det-17-primary: #c8102e;
-  --det-17-secondary: var(--nhl-white);
-  --det-17-tertiary: #c8102e;
-  --nsh-18-primary: #ffb81c;
-  --nsh-18-secondary: #041e42;
-  --nsh-18-tertiary: var(--nhl-white);
-  --stl-19-primary: #003087;
-  --stl-19-secondary: #ffb81c;
-  --stl-19-tertiary: var(--nhl-white);
-  --cgy-20-primary: #c8102e;
-  --cgy-20-secondary: #f1be48;
-  --cgy-20-tertiary: var(--nhl-black);
-  --van-23-primary: #041c2c;
-  --van-23-secondary: #00205b;
-  --van-23-tertiary: #97999b;
-  --ana-24-primary: #b9975b;
-  --ana-24-secondary: #fc4c02;
-  --ana-24-tertiary: var(--nhl-black);
-  --dal-25-primary: #006341;
-  --dal-25-secondary: #a2aaad;
-  --dal-25-tertiary: var(--nhl-black);
-  --lak-26-primary: #000000;
-  --lak-26-secondary: #a2aaad;
-  --lak-26-tertiary: var(--nhl-white);
-  --sjs-28-primary: #006272;
-  --sjs-28-secondary: #e57200;
-  --sjs-28-tertiary: var(--nhl-black);
-  --cbj-29-primary: #041e42;
-  --cbj-29-secondary: #c8102e;
-  --cbj-29-tertiary: var(--nhl-white);
-  --min-30-primary: #154734;
-  --min-30-secondary: #a6192e;
-  --min-30-tertiary: #eaaa00;
-  --wpg-52-primary: #041e42;
-  --wpg-52-secondary: #a2aaad;
-  --wpg-52-tertiary: #a6192e;
-  --ari-53-primary: #862633;
-  --ari-53-secondary: #ddcba4;
-  --ari-53-tertiary: var(--nhl-black);
-  --vgk-54-primary: #b9975b;
-  --vgk-54-secondary: var(--nhl-black);
-  --vgk-54-tertiary: #333f48;
+  --NJD-1-primary: #c8102e;
+  --NJD-1-secondary: var(--nhl-black);
+  --NJD-1-tertiary: var(--nhl-white);
+  --NYI-2-primary: #003087;
+  --NYI-2-secondary: #fc4c02;
+  --NYI-2-tertiary: var(--nhl-white);
+  --NYR-3-primary: #0033a0;
+  --NYR-3-secondary: #c8102e;
+  --NYR-3-tertiary: var(--nhl-white);
+  --PHI-4-primary: #fa4616;
+  --PHI-4-secondary: var(--nhl-black);
+  --PHI-4-tertiary: var(--nhl-white);
+  --PIT-5-primary: #ffb81c;
+  --PIT-5-secondary: var(--nhl-black);
+  --PIT-5-tertiary: var(--nhl-white);
+  --BOS-6-primary: #ffb81c;
+  --BOS-6-secondary: var(--nhl-black);
+  --BOS-6-tertiary: var(--nhl-white);
+  --BUF-7-primary: #003087;
+  --BUF-7-secondary: #ffb81c;
+  --BUF-7-tertiary: var(--nhl-white);
+  --MTL-8-primary: #a6192e;
+  --MTL-8-seconary: #001e62;
+  --MTL-8-tertiary: var(--nhl-white);
+  --OTT-9-primary: #b9975b;
+  --OTT-9-secondary: #c8102e;
+  --OTT-9-tertiary: var(--nhl-black);
+  --TOR-10-primary: #00205b;
+  --TOR-10-secondary: var(--nhl-white);
+  --TOR-10-tertiary: #00205b;
+  --CAR-12-primary: #c8102e;
+  --CAR-12-secondary: var(--nhl-black);
+  --CAR-12-tertiary: var(--nhl-white);
+  --FLA-13-primary: #b9975b;
+  --FLA-13-secondary: #041e42;
+  --FLA-13-tertiary: #c8102e;
+  --TBL-14-primary: #00205b;
+  --TBL-14-secondary: var(--nhl-white);
+  --TBL-14-tertiary: #00205b;
+  --WSH-15-primary: #041e42;
+  --WSH-15-secondary: #c8102e;
+  --WSH-15-tertiary: var(--nhl-white);
+  --CHI-16-primary: #c8102e;
+  --CHI-16-secondary: var(--nhl-black);
+  --CHI-16-tertiary: var(--nhl-white);
+  --DET-17-primary: #c8102e;
+  --DET-17-secondary: var(--nhl-white);
+  --DET-17-tertiary: #c8102e;
+  --NSH-18-primary: #ffb81c;
+  --NSH-18-secondary: #041e42;
+  --NSH-18-tertiary: var(--nhl-white);
+  --STL-19-primary: #003087;
+  --STL-19-secondary: #ffb81c;
+  --STL-19-tertiary: var(--nhl-white);
+  --CGY-20-primary: #c8102e;
+  --CGY-20-secondary: #f1be48;
+  --CGY-20-tertiary: var(--nhl-black);
+  --VAN-23-primary: #041c2c;
+  --VAN-23-secondary: #00205b;
+  --VAN-23-tertiary: #97999b;
+  --ANA-24-primary: #b9975b;
+  --ANA-24-secondary: #fc4c02;
+  --ANA-24-tertiary: var(--nhl-black);
+  --DAL-25-primary: #006341;
+  --DAL-25-secondary: #a2aaad;
+  --DAL-25-tertiary: var(--nhl-black);
+  --LAK-26-primary: #000000;
+  --LAK-26-secondary: #a2aaad;
+  --LAK-26-tertiary: var(--nhl-white);
+  --SJS-28-primary: #006272;
+  --SJS-28-secondary: #e57200;
+  --SJS-28-tertiary: var(--nhl-black);
+  --CBJ-29-primary: #041e42;
+  --CBJ-29-secondary: #c8102e;
+  --CBJ-29-tertiary: var(--nhl-white);
+  --MIN-30-primary: #154734;
+  --MIN-30-secondary: #a6192e;
+  --MIN-30-tertiary: #eaaa00;
+  --WPG-52-primary: #041e42;
+  --WPG-52-secondary: #a2aaad;
+  --WPG-52-tertiary: #a6192e;
+  --ARI-53-primary: #862633;
+  --ARI-53-secondary: #ddcba4;
+  --ARI-53-tertiary: var(--nhl-black);
+  --VGK-54-primary: #b9975b;
+  --VGK-54-secondary: var(--nhl-black);
+  --VGK-54-tertiary: #333f48;
 }
 
 .img-center {
@@ -162,5 +162,5 @@
 }
 
 .border-NJD {
-  border-color: var(--njd-1-primary);
+  border-color: var(--NJD-1-primary);
 }
